# meyabase-translate-inference

./: .env.example  .gitignore  README.md  app.py  cli.py  handler.py  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-06-13-meyabase-translate-inference.md
docs/superpowers/specs/: 2026-06-13-meyabase-translate-inference-design.md
tests/: conftest.py  test_app.py  test_cli.py  test_config.py  test_core.py  test_handler.py  test_integration.py
translation/: __init__.py  config.py  core.py
