[project]
name = "meyabase-translate-inference"
version = "0.1.0"
description = "Inference for the meyabase en-ng / ng-en translation models, with HuggingFace and local entrypoints."
requires-python = ">=3.10"
# Base dependencies — everything the HF handler and core need. These are the
# only deps exported to requirements.txt for HF Inference Endpoints.
dependencies = [
    "torch>=2.0",
    "transformers>=4.40,<5",
    "huggingface-hub>=0.23",
    "sentencepiece>=0.2",
    "sacremoses>=0.1",
]

[dependency-groups]
# Local FastAPI server only; not needed by the HF handler.
server = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.0",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.uv]
package = false
# Installed by `uv sync` for local development; excluded from the HF export
# via `uv export --no-default-groups`.
default-groups = ["server", "dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: real-model tests that download from the Hub (deselected by default)",
]
addopts = "-m 'not integration'"
